.gitattributes: add .fbs (flatbuffer schema)

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@ Dockerfile text eol=lf
 *.cuh text eol=lf
 *.dae text eol=lf
 *.dockerfile text eol=lf
+*.fbs text eol=lf
 *.h text eol=lf
 *.h.in text eol=lf
 *.hpp text eol=lf
