--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       args:
         USERNAME: ${USER}
         USERID: ${USERID}
+        GROUPID: ${GROUPID}
         WEBPRO: ${WEBPRO}
         INTERNPRO: ${INTERNPRO}
         PLUGINSDK: ${PLUGINSDK}
