docker-compose: user-defined bridge network
* turn on jumbo frames
* ip link show | grep mtu
* 9000 instead of 1500
* issue https://github.com/smanders/buildpro/issues/3

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -15,9 +15,16 @@ services:
         CRTOOL: ${CRTOOL}
         CRWRAP: ${CRWRAP}
     hostname: ${HNAME}
+    networks:
+      - bpnet
     volumes:
       - .:/bpvol
     stdin_open: true
     tty: true
+networks:
+  bpnet:
+    driver: bridge
+    driver_opts:
+      com.docker.network.driver.mtu: "9000"
 # docker-compose build
 # docker-compose run --rm bpro
