--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     network_mode: host
     volumes:
       - .:/bpvol/${COMPOSE_PROJECT_NAME}
+      - ~/.ssh:/home/${USER}/.ssh
+      - ~/.gitconfig:/home/${USER}/.gitconfig
     stdin_open: true
     tty: true
 # docker-compose build
