compose: cap_add SYS_PTRACE for sanitizer to work
issue https://github.com/smanders/buildpro/issues/12#issuecomment-793175136

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -14,6 +14,8 @@ services:
         PLUGINSDK: ${PLUGINSDK}
         CRTOOL: ${CRTOOL}
         CRWRAP: ${CRWRAP}
+    cap_add:
+      - SYS_PTRACE
     environment:
       - DISPLAY=${DISPLAY_ENV}
       - XAUTHORITY=${XAUTH_ENV}
