DOWNLD in .env, isrhub if reachable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         USERNAME: ${USER}
         USERID: ${USERID}
         GROUPID: ${GROUPID}
+        DOWNLD: ${DOWNLD}
         WEBPRO: ${WEBPRO}
         INTERNPRO: ${INTERNPRO}
         PLUGINSDK: ${PLUGINSDK}
