ADDSRC[1|2] as ARGs for ADD call in dockerfile
ADD .env _bld/*.tar.xz _bld/*.sh (the previous way)
was failing in WSL2 (newer version of docker?) because the _bld
directory only exists if building with an offline container bundle

on linux (older version of docker?) the previous way worked as long as
one file existed (and .env was created so one file always existed)

previous attempts to pass both _bld/*.tar.xz _bld/*.sh as a single ARG
failed on linux -- for some reason only the first would be used by ADD

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
         USERID: ${USERID}
         GROUPID: ${GROUPID}
         TZ: ${TZ}
+        ADDSRC1: ${ADDSRC1}
+        ADDSRC2: ${ADDSRC2}
         WEBPRO: ${WEBPRO}
         INTERNPRO: ${INTERNPRO}
         PLUGINSDK: ${PLUGINSDK}
