rename service from bpro to bld

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"dockerComposeFile": "../docker-compose.yml",
-	"service": "bpro",
+	"service": "bld",
 	"workspaceFolder": "/bpvol",
 	"initializeCommand": ["./.devcontainer/denv.sh"],
 	"settings": {
