--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,44 @@
-version: '3.4'
+version: '3.7'
+x-all: &all-alias
+  environment:
+    - DISPLAY=${DISPLAY_ENV}
+    - XAUTHORITY=${XAUTH_ENV}
+  user: ${USER}
+  stdin_open: true
+  tty: true
+x-bld: &bld-alias
+  cap_add:
+    - SYS_PTRACE
+  volumes:
+    - .:/bpvol/${COMPOSE_PROJECT_NAME}
+    - ..:/bpvol/workspace
+    - /tmp/.X11-unix:/tmp/.X11-unix
+    - ~/.ssh:/home/${USER}/.ssh
+    - ~/.gitconfig:/home/${USER}/.gitconfig
+x-all-build-args: &all-build-args-alias
+  USERNAME: ${USER}
+  USERID: ${USERID}
+  GROUPID: ${GROUPID}
+  TZ: ${TZ}
+x-bld-build-args: &bld-build-args-alias
+  WEBPRO: ${WEBPRO}
+  INTERNPRO: ${INTERNPRO}
+  PLUGINSDK: ${PLUGINSDK}
+  CRTOOL: ${CRTOOL}
 services:
   bld:
+    <<: *all-alias
+    <<: *bld-alias
     build:
       context: .devcontainer
       dockerfile: centos7-bld.dockerfile
       network: host
       args:
-        USERNAME: ${USER}
-        USERID: ${USERID}
-        GROUPID: ${GROUPID}
-        TZ: ${TZ}
+        <<: *all-build-args-alias
+        <<: *bld-build-args-alias
         ADDSRC1: ${ADDSRC1}
         ADDSRC2: ${ADDSRC2}
-        WEBPRO: ${WEBPRO}
-        INTERNPRO: ${INTERNPRO}
-        PLUGINSDK: ${PLUGINSDK}
-        CRTOOL: ${CRTOOL}
-    cap_add:
-      - SYS_PTRACE
-    environment:
-      - DISPLAY=${DISPLAY_ENV}
-      - XAUTHORITY=${XAUTH_ENV}
     hostname: ${HNAME}
     network_mode: host
-    user: ${USER}
-    volumes:
-      - .:/bpvol/${COMPOSE_PROJECT_NAME}
-      - ..:/bpvol/workspace
-      - ~/.ssh:/home/${USER}/.ssh
-      - ~/.gitconfig:/home/${USER}/.gitconfig
-      - /tmp/.X11-unix:/tmp/.X11-unix
-    stdin_open: true
-    tty: true
+    profiles:
+      - pbld
