compose.gpu: add -gpu suffix to hostname

--- a/.devcontainer/compose.gpu.yml
+++ b/.devcontainer/compose.gpu.yml
@@ -62,7 +62,7 @@ services:
           - driver: nvidia
             count: 1
             capabilities: [gpu]
-    hostname: ${HNAME}
+    hostname: ${HNAME}-gpu
     network_mode: host
     profiles:
       - pgpu
