compose: working_dir
entry script no longer does 'cd /bpvol'
entry script simplified to just running bash

--- a/.devcontainer/compose.bld.yml
+++ b/.devcontainer/compose.bld.yml
@@ -6,6 +6,7 @@ x-all: &all-alias
   user: ${USER}
   stdin_open: true
   tty: true
+  working_dir: /bpvol/${COMPOSE_PROJECT_NAME}
 x-bld: &bld-alias
   cap_add:
     - SYS_PTRACE
