compose.yml: combine << lines
https://github.com/smanders/buildpro/issues/46#issuecomment-1626458403

--- a/.devcontainer/compose.bld.yml
+++ b/.devcontainer/compose.bld.yml
@@ -28,15 +28,13 @@ x-bld-build-args: &bld-build-args-alias
   CRTOOL: ${CRTOOL}
 services:
   bld:
-    <<: *all-alias
-    <<: *bld-alias
+    <<: [*all-alias, *bld-alias]
     build:
       context: .devcontainer
       dockerfile: centos7-bld.dockerfile
       network: host
       args:
-        <<: *all-build-args-alias
-        <<: *bld-build-args-alias
+        <<: [*all-build-args-alias, *bld-build-args-alias]
         ADDSRC1: ${ADDSRC1}
         ADDSRC2: ${ADDSRC2}
     hostname: ${HNAME}
