--- a/.devcontainer/compose.gpu.yml
+++ b/.devcontainer/compose.gpu.yml
@@ -30,15 +30,13 @@ x-bld-build-args: &bld-build-args-alias
   CRTOOL: ${CRTOOL}
 services:
   bld:
-    <<: *all-alias
-    <<: *bld-alias
+    <<: [*all-alias, *bld-alias]
     build:
       context: .devcontainer
       dockerfile: centos7-bld.dockerfile
       network: host
       args:
-        <<: *all-build-args-alias
-        <<: *bld-build-args-alias
+        <<: [*all-build-args-alias, *bld-build-args-alias]
         ADDSRC1: ${ADDSRC1}
         ADDSRC2: ${ADDSRC2}
     hostname: ${HNAME}
@@ -46,15 +44,13 @@ services:
     profiles:
       - pbld
   gpu:
-    <<: *all-alias
-    <<: *bld-alias
+    <<: [*all-alias, *bld-alias]
     build:
       context: .devcontainer
       dockerfile: centos7-bld.dockerfile
       network: host
       args:
-        <<: *all-build-args-alias
-        <<: *bld-build-args-alias
+        <<: [*all-build-args-alias, *bld-build-args-alias]
         ADDSRC1: ${ADDSRC1}
         ADDSRC2: ${ADDSRC2}
     deploy:
