support installing later browser versions
https://github.com/smanders/buildpro/issues/47

--- a/.devcontainer/compose.vantage.yml
+++ b/.devcontainer/compose.vantage.yml
@@ -39,6 +39,8 @@ x-bld-build-args: &bld-build-args-alias
   INTERNPRO: ${INTERNPRO}
   PLUGINSDK: ${PLUGINSDK}
   CRTOOL: ${CRTOOL}
+  LATER_CHROME: ${LATER_CHROME}
+  LATER_FIREFOX: ${LATER_FIREFOX}
 services:
   bld:
     <<: [*all-alias, *bld-alias]
