--- a/.devcontainer/compose.pro.yml
+++ b/.devcontainer/compose.pro.yml
@@ -26,7 +26,7 @@ services:
     <<: [*all-alias, *bld-alias]
     build:
       context: .devcontainer
-      dockerfile: centos7-pro.dockerfile
+      dockerfile: rocky85-pro.dockerfile
       network: host
       args:
         <<: *all-build-args-alias
