rocky85-pro: initial image (replace centos7-pro)
issue https://github.com/smanders/buildpro/issues/23

--- a/.devcontainer/compose.pro.yml
+++ b/.devcontainer/compose.pro.yml
@@ -28,7 +28,7 @@ services:
     <<: [*all-alias, *bld-alias]
     build:
       context: .devcontainer
-      dockerfile: centos7-pro.dockerfile
+      dockerfile: rocky85-pro.dockerfile
       network: host
       args:
         <<: *all-build-args-alias
