--- a/.devcontainer/compose.bld.yml
+++ b/.devcontainer/compose.bld.yml
@@ -33,7 +33,7 @@ services:
     <<: [*all-alias, *bld-alias]
     build:
       context: .devcontainer
-      dockerfile: centos7-bld.dockerfile
+      dockerfile: rocky85-bld.dockerfile
       network: host
       args:
         <<: [*all-build-args-alias, *bld-build-args-alias]
