rocky85-bld: initial image (replace centos7-bld)
issue https://github.com/smanders/buildpro/issues/23

--- a/.devcontainer/compose.bld.yml
+++ b/.devcontainer/compose.bld.yml
@@ -36,7 +36,7 @@ services:
     <<: [*all-alias, *bld-alias]
     build:
       context: .devcontainer
-      dockerfile: centos7-bld.dockerfile
+      dockerfile: rocky85-bld.dockerfile
       network: host
       args:
         <<: [*all-build-args-alias, *bld-build-args-alias]
