--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@ CMakeLists.txt text eol=lf
 Dockerfile text eol=lf
 .gitattributes text eol=lf
 *.c text eol=lf
+*.cfg text eol=lf
 *.cmake text eol=lf
 *.conf text eol=lf
 *.cpp text eol=lf
