mount dock.sock, add user to docker group
user can run docker commands in container without sudo
https://github.com/smanders/buildpro/issues/53#issuecomment-1693705820

--- a/.devcontainer/compose.bld.yml
+++ b/.devcontainer/compose.bld.yml
@@ -14,12 +14,14 @@ x-bld: &bld-alias
     - .:/bpvol/${COMPOSE_PROJECT_NAME}
     - ..:/bpvol/workspace
     - /tmp/.X11-unix:/tmp/.X11-unix
+    - /var/run/docker.sock:/var/run/docker.sock
     - ~/.ssh:/home/${USER}/.ssh
     - ~/.gitconfig:/home/${USER}/.gitconfig
 x-all-build-args: &all-build-args-alias
   USERNAME: ${USER}
   USERID: ${USERID}
   GROUPID: ${GROUPID}
+  DOCKGID: ${DOCKGID}
   TZ: ${TZ}
 x-bld-build-args: &bld-build-args-alias
   WEBPRO: ${WEBPRO}
