--- a/.devcontainer/compose.gpu.yml
+++ b/.devcontainer/compose.gpu.yml
@@ -22,6 +22,7 @@ x-all-build-args: &all-build-args-alias
   USERNAME: ${USER}
   USERID: ${USERID}
   GROUPID: ${GROUPID}
+  DOCKGID: ${DOCKGID}
   TZ: ${TZ}
 x-bld-build-args: &bld-build-args-alias
   WEBPRO: ${WEBPRO}
