.devcontainer yml: BPROTAG
https://github.com/smanders/buildpro/issues/54

--- a/.devcontainer/compose.gpu.yml
+++ b/.devcontainer/compose.gpu.yml
@@ -19,6 +19,7 @@ x-bld: &bld-alias
     - ~/.gitconfig:/home/${USER}/.gitconfig
     - /mnt/gitRepo:/mnt/gitRepo
 x-all-build-args: &all-build-args-alias
+  BPROTAG: ${BPROTAG}
   USERNAME: ${USER}
   USERID: ${USERID}
   GROUPID: ${GROUPID}
