compose.gpu.yml: mount docker.sock
https://github.com/smanders/buildpro/issues/53#issuecomment-1693705820

--- a/.devcontainer/compose.gpu.yml
+++ b/.devcontainer/compose.gpu.yml
@@ -15,6 +15,7 @@ x-bld: &bld-alias
     - .:/bpvol/${COMPOSE_PROJECT_NAME}
     - ..:/bpvol/workspace
     - /tmp/.X11-unix:/tmp/.X11-unix
+    - /var/run/docker.sock:/var/run/docker.sock
     - ~/.ssh:/home/${USER}/.ssh
     - ~/.gitconfig:/home/${USER}/.gitconfig
     - /mnt/gitRepo:/mnt/gitRepo
