--- a/.devcontainer/compose.vantage.yml
+++ b/.devcontainer/compose.vantage.yml
@@ -48,7 +48,7 @@ services:
     <<: [*all-alias, *bld-alias]
     build:
       context: .devcontainer
-      dockerfile: centos7-bld.dockerfile
+      dockerfile: rocky85-bld.dockerfile
       network: host
       args:
         <<: [*all-build-args-alias, *bld-build-args-alias]
@@ -76,7 +76,7 @@ services:
     <<: [*all-alias, *run-alias, *bld-alias]
     build:
       context: .devcontainer
-      dockerfile: centos7-dev.dockerfile
+      dockerfile: rocky85-dev.dockerfile
       network: host
       args:
         <<: [*all-build-args-alias, *bld-build-args-alias]
