xpFindPkg() all devel pacakges

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ project(buildpro)
 set(externpro_REV 24.03)
 find_package(externpro REQUIRED)
 include(flags)
-xpFindPkg(PKGS fftw dde_lib pluginsdk sdvideo ng_gdp)
+xpFindPkg(PKGS criticalio dde_lib fftw gsoap kakadu ng_gdp palam patch pluginsdk sdvideo)
