--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(externpro_REV 24.04)
 find_package(externpro REQUIRED)
 include(flags)
 xpFindPkg(PKGS criticalio dde_lib fftw gsoap kakadu nasm ng_gdp palam patch pluginsdk sdvideo)
+xpSourceListAppend()
