--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ project(buildpro)
 set(externpro_REV 24.04)
 find_package(externpro REQUIRED)
 include(flags)
-xpFindPkg(PKGS criticalio dde_lib fftw gsoap kakadu nasm ng_gdp palam patch pluginsdk sdvideo)
+xpFindPkg(PKGS criticalio dde_lib fftw gsoap kakadu nasm ng_gdp palam patch pluginsdk sdvideo sqlite3)
 xpSourceListAppend()
