cmake: set(webpro_REV NONE) so webpro isn't installed in image
https://github.com/externpro/externpro/blob/0c520e7e476354485d1b9cab01e25d229af91524/denv.sh#L64

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ include(preproject)
 project(buildpro)
 set(externpro_REV 24.04)
 find_package(externpro REQUIRED)
+set(webpro_REV NONE)
 include(flags)
 xpFindPkg(PKGS criticalio dde_lib fftw gsoap kakadu nasm ng_gdp palam patch pluginsdk sdvideo sqlite3)
 xpSourceListAppend()
